--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,212 @@
+24.12.2021 v 4.6.3
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.6.3&state=all
+- [Security] tls1.0 in stream_socket_enable_crypto verwendet [#118]
+- Rechtschreibfehler views/files/_overview [#152]
+- randomBytes() in CSRFProtection.php liefert nicht die geforderte Menge an zufälligen Bytes [#177]
+- HiddenFolder permission visibility Issue [#200]
+- Blubber: Sortierung der Threads unter Community unintuitiv [#319]
+- Falsches Datumsformat bei Ankündigungen (Englische Ansicht) [#323]
+- Ausgabe der Ankündigungen auf templatebasierten externen Seiten ist kaputt [#335]
+- Doppelte Namen bei Studiengruppen [#369]
+- Räume werden bei der Raumauflösung als FREI angezeigt [#390]
+
+24.12.2021 v 4.5.5
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.5.5&state=all
+- RVV: Raumwunsch bei kurzzeitig gesperrten Räumen [#41]
+- OAuth: Call to a member function grantAccess() on bool [#46]
+- Raumeigenschaften für alle Personen anzeigen, die auch den Wochenkalender des Raumes sehen kann. [#52]
+- Raumeingenschaften - Belegungsplan [#53]
+- Platzaufteilung im Dialog "Raumeigenschaften" ungünstig [#57]
+- Anmelderegel "höheres Fachsemester bevorzugen" zufällige Darstellung der Studiengangsbedingungen [#61]
+- Benachrichtigung über selbst gelöschte Buchung verwirrend [#62]
+- Logeinträge für Raumbuchungen in Veranstaltungen werden nicht der Veranstaltung zugeordnet [#66]
+- MVV-Studiengang-Ansprechpartner: Externe Personen [#69]
+- Administration von Einrichtungen zeigt die aktuelle Einrichtung nicht an [#82]
+- Anmeldeset > Losverfahren > Versteckte Veranstaltungen können ausgewählt werden [#84]
+- Raumsuche: Belegungspläne werden nicht mit dem Beginn des Zeitbereiches geladen, der bei der Raumsuche verwendet wurde [#95]
+- Blubber: Datei hochladen-Icon ist nicht per Tastaturnavigation erreichbar [#99]
+- Use of undefined constant nobody in smileys.php [#115]
+- Export von Raumbuchungen: Bei VA-bezogenen Buchungen wird der Veranstaltungstitel nicht im Feld Beschreibung hinterlegt [#123]
+- Export von Raumbuchungen: Bei Buchungen mit Wiederholungsterminen wird nur der erste Termin exportiert [#126]
+- Raumsuche: Individuelle Raumgruppen stehen nur für Personen mit Berechtigungen an der Raumverwaltung zur Verfügung [#158]
+- Raumsuche verwendet falsche HTTP-Semantik [#159]
+- Belegungsplan zeigt Titel unsichtbarer Veranstaltungen [#165]
+- Verkürzung regelmäßiger Termine verkürzt Raumbuchungen nicht [#166]
+- Anmeldeverfahren: Bedingte Anmeldung [#175]
+- doppelter eintrag in userdomains view [#205]
+- Raumanfragen: Unvollständige Zuweisung von Räumen nicht mehr möglich [#215]
+- Raumanfragen: Vorhandene Buchungen werden nicht angezeigt [#241]
+- Raumanfragen: vorhandene Buchungen zur Raumanfrage werden als Überschneidungen erkannt [#242]
+- Falsche Überschneidungchecks in der neuen Raumverwaltung [#251]
+- Raumanfragen: Suche nach Räumen liefert keine Treffer [#261]
+- Auflösen von Raumanfragen: Gelbes Icon bei Terminserie liefert keine bzw. falsche Informationen [#264]
+- Erstellen/Bearbeiten von Raumanfragen in Veranstaltung: Anderer Raum kann über „Anderen Raum wählen“ nicht ausgewählt werden [#267]
+- Raumsuche: Zurücksetzen-Button löscht URL-Parameter nicht [#270]
+- Raumanfragen: Filter "Nur regelmäßige Termine" zeigt auch Einzeltermine [#281]
+- Raumverwaltung:  Info-i in der Anfragenliste: Räume mit rein [#284]
+- ondelete statt on_delete in Course und UserDomain [#299]
+- Blubber: Bearbeiten-Icon neben einem Blubber nicht tastaturbedienbar [#300]
+- Raumanfragen: Überschneidungen werden bei regelmäßigen Termien nicht mehr angezeigt. [#302]
+- Veranstaltungsfilter bei den Sprechstunden lässt sich nicht zurücksetzen [#307]
+- Protokollierung von Raumbuchungen ist kaputt [#365]
+- Protokollierung von Raumanfragen fehlt größtenteils [#366]
+- MVV: Suche bei den Dokumenten/Materialien defekt [#383]
+- MVV: "Mehr-Anzeigen-Funktion" in Informationen zum Studiengang (Abschnitt "Aufbaustudiengänge") defekt [#384]
+- Sprechstunden lassen sich von Vertretung nicht verwalten [#389]
+- Ändert man den Namen einer Statusgruppe, ändert sich nicht der Name des Gruppenordners [#391]
+- PHP Warning: sizeof(): Parameter must be an array or an object that implements Countable in [#399]
+- PHP-Error: Error: Call to a member function getAuthenticatedUser() [#413]
+- Admins wird der Reiter "Terminvergabe" auf Profilseiten nicht angezeigt [#414]
+- 4.5: Anfrage auflösen funktioniert nicht [#418]
+- TN-Gruppe (in VA) anlegen ohne Dateiordner schlägt fehl. [#421]
+- Gruppen: Option "Zu dieser Gruppe gehört ein Dateiordner" läßt sich nicht wieder abschalten [#422]
+- Darstellung auf "Profil > Studiendaten" unintuitiv [#429]
+- Belegungspläne sollten unsichtbare LV anzeigen, wenn der entsprechende Nutzer diese auch in der Suche finden darf [#437]
+- Rundmail-Aktion in der Raumverwaltung beachtet auch individuelle Gruppen, die keine Räume enthalten [#440]
+- Info-Icon zum Aufruf der Studiengangsinformationen sind unterschiedlich groß [#451]
+- Belegungspläne: Wort „Vorlesungswoche“ ohne Nummer der Woche [#453]
+- <br> in Abfrage, ob man den Termin ausfallen lassen will [#474]
+- Objekte vom Typ FileRef geben eine ungenügende Download-URL zurück. [#482]
+- MVV: "Art der Zulassung" wird nicht bei den Informationen zum Studiengang ausgegeben [#483]
+
+24.12.2021 v 4.4.8
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.4.8&state=all
+- URLs in freien Raumangaben auswerten [#19]
+- OpenGraph: Fehler beim Fetchen der Inhalte abfangen [#50]
+- Info-I sind nicht per Tastaturnavigation erreichbar [#97]
+- Hilfelasche ist nicht per Tastaturnavigation erreichbar [#98]
+- Profil: Profilbild in der Sidebar wird nicht umrahmt, wenn Skiplinks angeschaltet wurden [#100]
+- Dialog zum Ändern des Profilbildes: Button zum Hochladen ist per Tastaturnavigation nicht erreichbar [#101]
+- Dateibereich: Auswahl des Ordnertyps nicht per Tastatur erreichbar [#103]
+- Skiplinks: Auswahl mit Anker als Ziel bewirkt nichts [#105]
+- studip-checkbox ist nicht per Tastaturnavigation erreichbar [#111]
+- Globale Suche: Ergebnis-Anzeige erlaubt Auswahl von ausgegrauten Elementen über die Tastaturnavigation [#112]
+- Schließen-Icon von MessageBox-Elementen ist nicht über die Tastaturnavigation erreichbar [#113]
+- Tippfehler im Kompatibilitätsskript [#197]
+- Veranstaltungsexport mit Modulen gibt Lehrende unschön und Module gegebenenfalls n-fach aus [#209]
+- WYSIWYG-Editor platziert link-extern-Icon bei Links mit E-Mail Adressen [#250]
+- Schnittstelle zu ILIAS 4 kaputt [#252]
+- Profilseite: Skiplink „Benutzerprofil“ funktioniert nicht [#258]
+- Schreibfehler auf der Seite „Teilnehmendenliste importieren“ [#298]
+- Name von Studiengruppen soll auf Übersichtsseite angezeigt werden [#314]
+- "Zur Rangliste" im Profil wird nicht umrahmt [#333]
+- Anmeldeverfahren: Härtefälle werden u.U. nicht berücksichtigt, wenn "Bevorzugte Anmeldung" benutzt wird [#338]
+- Anmeldeverfahren: Höhere Semester bevorzugen erzeugt Härtefälle [#339]
+- Aufheben der Terminzuordnung einer Gruppe nicht möglich [#351]
+- Vierter Skiplink ist nicht einheitlich benannt [#393]
+- Skiplink zum Profilmenü fokussiert falsches Element [#396]
+- Export von abgelaufenen Terminen exportiert falsch [#430]
+- XSS-Fehler in den externen Seiten (Veranstaltungsbrowser) [#460]
+
+01.09.2021 v 4.6.2
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.6.2
+- Fehlende Validierung bei Termin-Farbauswahl im Planer (Studenplan) [#10584]
+- Fragebögen: Reihenfolge der Fragen wird nicht gespeichert [#11179]
+- Batch-Aktionen im Dateibereich sind ohne Auswahl aktiviert [#11218]
+- "Zitationstil auswählen" gehört nicht unter "Verwaltung" [#11261]
+- Bibliotheksfunktionen: Funktionalität ist nicht für Tutoren zugänglich [#11412]
+- "Herunterladen" im Detaildialog einer Datei öffnet die Datei ggf. im Browser [#11413]
+- Bibliotheksfunktionen: URLs werden nicht ausgewertet [#11430]
+- Bibliotheksfunktionen: Sonderzeichen führen zu einem Fehler in der K10Plus Suche [#11431]
+- MVV: Ansprechpartner - Filter nach Modul-Status fehlt [#11464]
+- Bibliotheksfunktionen: Literaturobjekt im Dateibereich zeigt immer Buch Icon [#11472]
+- Fehler beim Anzeigen von Studiengangsinhalten im VA-Verzeichnis [#11487]
+- Fatal Error bei Export persönlicher Dateien [#11519]
+- Dateibereich: Button "Neuer Ordner" läd nicht als Dialog [#11527]
+- Verlinkung/Navigation im Wiki defekt [#11530]
+- Ordner in FileSystemPlugins zeigen keine Detailseite [#11533]
+- Beim Dateikopieren führt Click auf FilesystemPlugin zu Fehlermeldung [#11565]
+- MVV: Detailseite eines Studiengangs [#11569]
+- MVV: Verwalten bzw. Hinzufügen von Dokumenten [#11571]
+- Sortieren von Dokumenten innerhalb eines Studiengangs [#11572]
+- MVV: PDF Export bei Studiengängen berücksichtigt keine Inhalte [#11573]
+- Sortierung im Dateibereich erfolgt nicht numerisch [#11622]
+- Sortierung der Tabellen im Dateibereich wird nicht korrekt angedeutet [#11665]
+
+01.09.2021 v 4.5.4
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.5.4
+- Inkonsistenzen beim Überbuchen von Reservierungen [#10594]
+- Meldung: "Ihre Authentifizierung ($auth) benutzt nicht die Stud.IP Datenbank" [#10974]
+- Sperrbuchung entfernt angrenzende Buchungen [#11022]
+- Impressum: Unsichtbare root-Benutzerkonten werden angezeigt [#11095]
+- Anfrage auflösen - Raumauswahl [#11148]
+- Fehlerhafte Textstrings bei Raumbuchungen [#11388]
+- Interner Kommentar an Raumbuchungen ist nur für buchende Person editierbar [#11389]
+- RVV: Ändern von Raumeigenschaften geht nicht [#11411]
+- rrv2-Migration: Automatisches Löschen von Ressourcenhierarchien kann nicht funkionieren [#11448]
+- Raumbuchung kann beim Bearbeiten nicht zum Terminblock („Konvolut“) gemacht werden [#11449]
+- CoreDocuments::getIconNavigation() achtet nur auf "mkdate" [#11459]
+- Name und Mailadresse trotz Unsichtbarkeit unter Ansprechpartner sichtbar [#11466]
+- Nutzerdomänen: Sichtbarkeit innerhalb der Domäne kann nicht eingestellt werden [#11471]
+- Fehlerhaftes `page_close()` für den Installer [#11478]
+- MVV Verwaltung der Ansprechpartner: Person kann nur einer Kategorie an einem Modul zugeordnet werden [#11517]
+- RVV: Wochenansicht bei Räumen zeigt noch die falsche Semesterstartwoche an [#11521]
+- Fehlende Benachrichtigung beim Löschen einer Buchung [#11528]
+- Aktion „Buchungen mit Kommentaren“ zeigt auch Buchungen ohne interne Kommentare an [#11529]
+- resources/export/booking beachtet Ressourcen nicht [#11536]
+- Zeiten/Räume-Seite: „Nur buchbare Räume anzeigen“ fehlt bei der Bulk-Aktion für Einzeltermine [#11544]
+- Zeiten/Räume: „Nur buchbare Räume anzeigen“ filtert Räume inkorrekt, wenn man kein Raumadmin ist [#11545]
+- Buchungsdialog: Enddatum der Wiederholung wird zurückgesetzt, wenn das Datum der Buchung geändert wird [#11547]
+- Warnings bei MVV Ansprechpartner [#11548]
+- Wort „Präsenzveranstaltung“ aus übersetzbaren Texten entfernen [#11549]
+- Blubber kaputt [#11551]
+- Anhang an Nachricht unsichtbar beim Schreiben [#11556]
+- „Manuelles Eintragen von Nutzergruppen in Veranstaltungen“: Auswahl anhand einer Domäne geht nicht [#11562]
+- LOG-Einträge beim Freigeben/Löschen von Terminen und Räumen fehlt [#11563]
+- RVV: Blättern bei den Raumanfragen [#11608]
+- Individuelle Raumgruppen: Buchungsdialog kann nicht für einzelne Räume aufgerufen werden [#11698]
+- Buchungsdialog: Bei Buchungen mit täglichen Wiederholungsterminen wird das Intervall nicht beachtet [#11699]
+- Veranstaltungskalender führt zu Zugriff verweigert [#11713]
+- Sperrbuchung entfernt angrenzende Buchungen [#6]
+- Raumanfrage selbst auflösen wird nicht für globale Raumadmins angeboten [#34]
+- Benachrichtigung über selbst gelöschte Buchung verwirrend [#62]
+
+01.09.2021 v 4.4.7
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.4.7
+- Anmeldesets: Veranstaltungen konfigurieren nach Ändern der Liste der Veranstaltungen im Set [#6799]
+- Link zu "Datenschutz" funktioniert nicht von Login-Seite [#8896]
+- Anzeige der Screenshots auf der "Mehr..." Seite funktioniert nicht immer [#8923]
+- Globale Suche: Auch Nachrichten sollen im Dialog auf der Seite angezeigt werden [#9184]
+- CSRF-Absicherung der REST-API [#9537]
+- Vorgemerkte mehrsemestrige Veranstaltungen tauchen nur ein Mal im Stundenplan auf [#9835]
+- WYSWIG: STRG/CMD+Z macht falsche Dinge [#10193]
+- Aktion "Neue Wiki-Seite anlegen" prüft nicht auf erlaubte Zeichen und erzeugt kaputte Wikieinträge [#10489]
+- Auswahl der Heimateinrichtung beim Anlegen von Veranstaltungen [#10971]
+- Nachrichten: Kaputte Formatierung "ursprüngliche Nachricht" [#11019]
+- Studiengruppenerkennung mangelhaft [#11061]
+- Fehlerhafte DocBlock-Angaben [#11392]
+- Über Navigation::setLinkAttributes() gesetzte Attribute gehen verloren [#11420]
+- Link aus der Schnellsuche zeigt auf Übersicht, auch wenn diese abgeschaltet ist [#11424]
+- HTML-Fehler [#11426]
+- PHP Fatal error:  SetFileFormat(): '' not in available choices [#11436]
+- Drei Punkte Menü in der Gruppenverwaltung schlecht zu bedienen [#11440]
+- background_stripes.jpg: No such file or directory [#11452]
+- Dialog zum Bearbeiten von Berechtigungen an einer Wiki-Seite lädt die gesetzten Einstellungen nicht [#11456]
+- MySQL-Syntaxfehler macht Plugins unregistrierbar [#11457]
+- Falsche Spaltentypen in userfilter_fields [#11462]
+- Namen der Datenfelder sind erst nach Anlegen übersetzbar [#11463]
+- JS-Dependency autoprefixer aktualisieren und IE <= 11 nicht mehr unterstützen [#11474]
+- Button "Auswählen" ist nicht ins Englische übersetzt [#11479]
+- Speichern von Zusatzangaben ohne Änderungen wird als "Fehler" angezeigt [#11486]
+- Dialoge verhalten sich auf längeren Seiten merkwürdig [#11489]
+- Bestätigen-Dialog im Wiki enthält HTML-Markup (und hat falsche Größe) [#11491]
+- Dialoge sind manchmal zu klein [#11495]
+- locale/en/LC_HELP/visibility_decision.php: Zweimal „Become visible“ [#11496]
+- HelpContent und HelpTour werten DEFAULT_LANGUAGE nicht aus [#11499]
+- UserManagement::deleteUser kann Fehler beim Löschen von Benutzerkonten ohne Dateibereich verursachen [#11500]
+- Datenfelder ohne Angabe eines Instituts werden eventuell nicht angezeigt [#11512]
+- Übersetzungsfehler auf der Verwaltungsseite einer VA [#11513]
+- RCE beim Upload von Bildschirmhintergründen [#11514]
+- Nutzer Import in die Teilnehmerliste fehlt Navigation [#11515]
+- Passwörter dürfen nur ascii Zeichen enthalten, es gibt aber keinen Hinweis [#11516]
+- Lehrende aus fremden Veranstaltungen werden gefunden können aber nicht zugeordnet werden [#11518]
+- Sidebar lässt sich nicht durch Touch ausserhalb schliessen [#11524]
+- SimpleORMap::toRawArray() gibt nie NULL-Werte zurück [#11525]
+- Export in der Veranstaltungsadministration enthält nicht die letzte Aktivität [#11526]
+- Löschen einer Hauptveranstaltung löst fehler in Unterveranstaltung aus [#11538]
+- Eintragen von neuen Teilnehmern findet keine Studierenden mehr [#11577]
+- Teilnehmendenliste importieren: Langer Tooltip ist nicht lesbar [#11700]
+
 08.04.2021 v 4.6.1
 https://develop.studip.de/trac/query?milestone=Stud.IP+4.6.1
 - Anfragenplan: Liste zeigt nicht den gewünschten Raum [#10749]
